Início de estruturação UserList + Help

--- a/src/app/game/components/game/game.component.html
+++ b/src/app/game/components/game/game.component.html
@@ -2,18 +2,7 @@
 
     <!-- Menu Superior -->
     <mat-grid-tile colspan="6">
-        <mat-toolbar>
-            <!-- Nome do jogo -->
-            <span>Multiplayer Game</span>
-            
-            <!-- Separador que joga para a direita -->
-            <span class="spacer"></span>
-
-            <!-- Botão de ajuda -->
-            <button mat-icon-button>
-                <mat-icon>help_outline</mat-icon>
-            </button>
-        </mat-toolbar>
+        <app-menu style="width:100%;"></app-menu>
     </mat-grid-tile>
     <mat-divider></mat-divider>
 
