--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="row center-vertical-align center-horizontal-align container">
+    <div class="column card">
+        <div class="column card-header">
+            <span class="card-header__title">TITULO HERE</span>
+            <span class="card-header__subtitle">SUBTITULO HERER</span>
+        </div>
+        <div class="column card-content">
+            <form [formGroup]="form">
+                <mat-form-field appearance="outline">
+                    <mat-label>Username</mat-label>
+                    <input matInput placeholder="Username" formControlName="username">
+                    <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
+                    <!-- <mat-hint>Hint</mat-hint> -->
+                    <mat-error *ngIf="form.invalid">O muller não gostou desse username</mat-error>
+                </mat-form-field>
+            </form>
+
+        </div>
+        <div class="row flex__end-horizontal-align card-actions">
+            <button mat-stroked-button (click)="onClearForm()">Cancelar</button>
+            <button mat-stroked-button (click)="onSubmitForm()">Entrar</button>
+        </div>
+    </div>
+</div>
