--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -9,16 +9,14 @@
                 <mat-form-field appearance="outline">
                     <mat-label>Username</mat-label>
                     <input matInput placeholder="Username" formControlName="username">
-                    <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
-                    <!-- <mat-hint>Hint</mat-hint> -->
-                    <mat-error *ngIf="form.invalid">O muller não gostou desse username</mat-error>
+                    <mat-error *ngIf="form.get('username')?.invalid">{{getFormErrorMessage('username')}}</mat-error>
                 </mat-form-field>
             </form>
 
         </div>
         <div class="row flex__end-horizontal-align card-actions">
             <button mat-stroked-button (click)="onClearForm()">Cancelar</button>
-            <button mat-stroked-button (click)="onSubmitForm()">Entrar</button>
+            <button mat-stroked-button (click)="onSubmitForm()" [disabled]="form.invalid">Entrar</button>
         </div>
     </div>
 </div>
