--- a/src/app/game/components/user-list/user-list.component.html
+++ b/src/app/game/components/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="users$ | async as users">
   <mat-selection-list #userList [multiple]="false">
     <mat-list-option *ngFor="let user of users" [value]="user">
-    {{user}}
-  </mat-list-option>
+      {{user?.name}}
+    </mat-list-option>
   </mat-selection-list>
 </div>
