--- a/src/app/game/components/chat/chat.component.html
+++ b/src/app/game/components/chat/chat.component.html
@@ -7,6 +7,7 @@
         </mat-list>
     </div>
     <mat-form-field>
+        <!-- Mudar texto para arquivo de constantes de idioma -->
         <mat-label>Enviar Mensagem</mat-label>
         <input id="chatInput" matInput type="text" (keydown.enter)="enviarMensagem($event.target)">
     </mat-form-field>
