--- a/src/app/game/menu/ajuda/ajuda.component.html
+++ b/src/app/game/menu/ajuda/ajuda.component.html
@@ -1,3 +1,5 @@
+<!-- Mudar todos os textos para arquivo de constantes de idioma -->
+
 <h1 mat-dialog-title>Ajuda</h1>
 <div mat-dialog-content>
   Inserir descrição do jogo
