Implementada visão de admin da sala

--- a/src/app/game/components/game-log/game-log.component.html
+++ b/src/app/game/components/game-log/game-log.component.html
@@ -1,1 +1,7 @@
 <p>game-log works!</p>
+
+<div *ngIf="isAdmin">
+    <button mat-button color="primary" (click)="startGame()">
+        Iniciar
+    </button>
+</div>
