--- a/src/app/game/menu/menu.component.html
+++ b/src/app/game/menu/menu.component.html
@@ -5,6 +5,20 @@
     <!-- Separador que joga para a direita -->
     <span class="spacer"></span>
 
+    <!-- Botão de seleção de idioma -->
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>translate</mat-icon>
+    </button>
+
+    <!-- Idiomas disponiveis -->
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item *ngFor="let idioma of idiomas" (click)="selecionarIdioma(idioma)">
+            <!-- Substituir icone por bandeira, talvez? Ou só remover -->
+            <mat-icon>translate</mat-icon>
+            <span>{{idioma}}</span>
+        </button>
+    </mat-menu>
+
     <!-- Botão de ajuda -->
     <button mat-icon-button (click)="exibirAjuda()">
         <mat-icon>help_outline</mat-icon>
