--- a/src/app/core/scss/colors.scss
+++ b/src/app/core/scss/colors.scss
@@ -1,55 +1,27 @@
 $background-colors: (
-    "elevation-00dp": #121212,
-    "elevation-01dp": #1e1e1e,
-    "elevation-02dp": #222222,
-    "elevation-03dp": #242424,
-    "elevation-04dp": #272727,
-    "elevation-06dp": #2c2c2c,
-    "elevation-08dp": #2e2e2e,
-    "elevation-12dp": #333333,
-    "elevation-16dp": #343434,
-    "elevation-24dp": #383838,
+    "elevation-00dp": #202225,
+    "elevation-01dp": #292b2f,
+    "elevation-02dp": #2f3136,
+    "elevation-03dp": #36393f,
 );
 
-$background-border-colors: (
-    "border-1": #616161,
-    //evitar usar quando o background-color estiver entre 08dp e 24dp
-    "border-2": #424242,
-    //evitar usar quando o background-color estiver entre 12dp e 24dp
-);
+$primary-color: #1eb980;
+$primary-dark-color:unset;
+$primary-light-color:unset;
+$secondary-color: #045d56;
+$secondary-dark-color:unset;
+$secondary-light-color:unset;
 
-$element-background-colors: (
-    "none": unset,
-    "disabled": unset,
-    "primary": unset,
-    // cor com transparência
-    "secondary": unset,
-    //cor com transparencia
-    "warn": unset,
-    // cor com transparência,,,,
-);
+$default-color: white;
+$disabled-color: #bdbdbd;
 
-$element-border-colors: (
-    "none": #424242,
-    "disabled": unset,
-    "primary": unset,
-    "secondary": unset,
-    "warn": unset,
-);
+$warn-color: #f44336;
+$warn-light-color: #ff7961;
+$warn-dark-color: #ba000d;
 
-$font-colors: (
-    "disabled": unset,
-    "primary": #fafafa,
-    "secondary": unset,
-    "warn": unset,
-);
-
-@mixin setElementColor($background-color: false, $font-color: false, $border-color: false) {
+@mixin setElementColor($background-color: false, $border-color: false) {
     @if $background-color {
         background-color: $background-color;
-    }
-    @if $font-color {
-        color: $font-color;
     }
     @if $border-color {
         border-color: $border-color;
