--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,10 +40,38 @@ body {
 }
 body {
     margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.card {
+.card{
+    border-radius: 12px;
+}
+
+.rectangular-button {
     border-radius: 8px;
-    padding: 16px 32px;
+    border-width: 2px;
+    border-style: solid;
+}
+
+@import "src/app/core/scss/grid.scss";
+
+@include grid("large-handset") {
+    .container {
+    }
+
+    .card {
+        padding: 32px 16px;
+    }
+}
+@include grid("medium-tablet") {
+    .container {
+    }
+}
+@include grid("desktop") {
+    .container {
+        // padding: 0 128px;
+    }
+
+    .card {
+        padding: 24px 32px;
+    }
 }
