--- a/src/app/core/components/login/login.component.scss
+++ b/src/app/core/components/login/login.component.scss
@@ -42,7 +42,7 @@
             }
 
             input::placeholder {
-                padding-left: 4px;
+                padding-left: 6px;
                 @include setFont($family: "regular", $color: $disabled-color);
             }
 
@@ -56,8 +56,13 @@
             transition: 200ms ease-in-out;
 
             input::placeholder {
-                @include setElementColor($border-color: $warn-light-color);
+                @include setFont($color: $warn-light-color);
             }
+        }
+
+        .login-card-content__input-error {
+            @include setFont($family: "bold");
+            transition: 300ms ease-in-out;
         }
 
         .login-card-content__button {
@@ -88,6 +93,8 @@
     form,
     .login-card-content__input,
     .login-card-content__button,
+    .login-card-content-input__wrapper,
+    form,
     input {
         width: 100%;
     }
@@ -144,13 +151,18 @@
             padding-top: 24px;
 
             .login-card-content__input {
-                padding: 8px 16px;
+                padding: 12px 16px;
+                border-width: 3px;
 
                 input {
                     @include setFont($size: 1.1rem);
                 }
             }
 
+            .login-card-content__input-error {
+                padding-top: 12px;
+                padding-left: 8px;
+            }
             .login-card-content__button {
                 @include setFont($size: 1rem);
 
