--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -15,35 +15,48 @@
     </div>
 
     <!-- Início do card de login -->
-    <div class="column card login-card">
+    <div class="column card login-card" *ngIf="!isLoading; else loadingCard">
         <div class="column center-vertical-align login-card-header">
             <span class="login-card-header__title"> {{selectedDictionary['Title']}}</span>
             <span class="login-card-header__subtitle"> {{selectedDictionary['LoginTip']}} </span>
         </div>
-        <div class="row login-card-content" *ngIf="getFormControlValue('step') === 0">
+        <div class="column login-card-content" *ngIf="getFormControlValue('step') === 0">
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class="row center-horizontal-align login-card-content">
+                <!-- <div class="column flex__start-vertical-align login-card-content-input__wrapper"> -->
                 <div class="login-card-content__input" [ngClass]="getFormControlNameIsValid('room')">
-
                     <input type="text" [placeholder]="selectedDictionary['Room']" formControlName="room">
                 </div>
+                <!-- </div> -->
                 <button class="rectangular-button login-card-content__button"
-                    [disabled]="getFormControlNameIsValid('room')" matRipple>{{selectedDictionary['Next']}}</button>
+                    [disabled]="this.form.get('room')?.invalid" matRipple>{{selectedDictionary['Next']}}</button>
+
             </form>
         </div>
         <div class="column login-card-content" *ngIf="getFormControlValue('step') === 1">
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class="row center-horizontal-align login-card-content">
                 <div class="column flex__start-vertical-align login-card-content-input__wrapper">
-                <div class="login-card-content__input" [ngClass]="getFormControlNameIsValid('username')">
-                    <input type="text" [placeholder]="selectedDictionary['Username']" formControlName="username">
-                </div>
+                    <div class="login-card-content__input" [ngClass]="getFormControlNameIsValid('username')">
+                        <input type="text" [placeholder]="selectedDictionary['Username']" formControlName="username">
+                    </div>
                     <span class="login-card-content__input-error" *ngIf="form.get('username')?.getError('notAllowed')">
                         {{getFormErrorMessage("username")}}</span>
                 </div>
+                <button class="rectangular-button login-card-content__button" [disabled]="this.form.invalid"
+                    matRipple>{{selectedDictionary['Next']}}</button>
 
             </form>
         </div>
-        <div class="row login-card-content" *ngIf="isLoading">
-            loading spinner here
-        </div>
+        <!-- <div class="column center-horizontal-align center-vertical-align login-card-content login-card-content__loading"
+            *ngIf="isLoading">
+            <mat-spinner></mat-spinner>
+        </div> -->
     </div>
+    <ng-template #loadingCard>
+        <div class="column loading-card">
+            <div class="column center-horizontal-align center-vertical-align loading-card-content">
+                <mat-spinner></mat-spinner>
+                <span>MULLER COLOCA UM TEXTO BONITO AQUIIIIIIII</span>
+            </div>
+        </div>
+    </ng-template>
 </div>
