--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -33,22 +33,18 @@
                             {{getFormErrorMessage("username")}}</span>
                     </div>
                     <button class="rectangular-button login-card-content__button login-card-content__back-button"
-                        matRipple (click)="onGoBack()">{{selectedDictionary['Next']}}</button>
+                        matRipple (click)="onGoBack()">{{selectedDictionary['Back']}}</button>
                     <button class="rectangular-button login-card-content__button login-card-content__next-button"
-                        [disabled]="this.form.invalid" matRipple>{{selectedDictionary['Next']}}</button>
+                        [disabled]="this.form.invalid" matRipple>{{selectedDictionary['Join']}}</button>
 
                 </form>
             </div>
-            <!-- <div class="column center-horizontal-align center-vertical-align login-card-content login-card-content__loading"
-            *ngIf="isLoading">
-            <mat-spinner></mat-spinner>
-        </div> -->
         </div>
         <ng-template #loadingCard>
             <div class="column loading-card">
                 <div class="column center-horizontal-align center-vertical-align loading-card-content">
                     <mat-spinner></mat-spinner>
-                    <span>MULLER COLOCA UM TEXTO BONITO AQUIIIIIIII</span>
+                    <span>{{selectedDictionary['Connecting']}}</span>
                 </div>
             </div>
         </ng-template>
